--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-registry=https://npm.pkg.github.com/@eli-micho/
+registry=https://npm.pkg.github.com/@eli-micho/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
 
 always-auth=true
